# STCK

./: README.md  pyproject.toml
src/stck/: __init__.py  data.py  data_fetcher.py  evolution.py  formulas.py  main.py  portfolio.py  presets.py  strategies.py  tickers.py  ui.py  updater.py
tests/: test_data.py  test_evolution.py  test_formulas.py  test_presets.py  test_strategies.py  test_ui_helpers.py  test_updater.py
